<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f8f8f8"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".login.activity.ForGotPasswordActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/toplayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <!-- 手机号-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_5dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingRight="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="@dimen/dimen_90dp"
                android:layout_height="wrap_content"
                android:text="@string/string_phone"
                android:textColor="@color/color_2f2f2f"
                android:textSize="@dimen/dimen_14sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/string_hintphone"
                android:textColor="@color/color_bababa"
                android:textSize="@dimen/dimen_14sp" />


        </LinearLayout>

        <!-- 手机号-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/color_d7d7d7" />
        <!-- 验证码-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_5dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingRight="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="@dimen/dimen_90dp"
                android:layout_height="wrap_content"
                android:text="@string/string_code"
                android:textColor="@color/color_2f2f2f"
                android:textSize="@dimen/dimen_14sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/string_hint_code"
                android:textColor="@color/color_bababa"
                android:textSize="@dimen/dimen_14sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_sendcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_getcode"
                android:textColor="@color/color_202B97"
                android:textSize="@dimen/dimen_14sp" />

        </LinearLayout>

        <!-- 验证码-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/color_d7d7d7" />

        <!-- 新密码-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_5dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingRight="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="@dimen/dimen_90dp"
                android:layout_height="wrap_content"
                android:text="@string/string_newpassword"
                android:textColor="@color/color_2f2f2f"
                android:textSize="@dimen/dimen_14sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_newpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/string_hintnewpassword"
                android:textColor="@color/color_bababa"
                android:textSize="@dimen/dimen_14sp" />


        </LinearLayout>

        <!-- 新密码-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/color_d7d7d7" />
        <!-- 确认新密码-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_5dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingRight="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="@dimen/dimen_90dp"
                android:layout_height="wrap_content"
                android:text="@string/string_commitnewpassword"
                android:textColor="@color/color_2f2f2f"
                android:textSize="@dimen/dimen_14sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_commitnewpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:inputType="textPassword"
                android:hint="@string/string_commit_newpassword"
                android:textColor="@color/color_bababa"
                android:textSize="@dimen/dimen_14sp" />


        </LinearLayout>

        <!-- 确认新密码-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/color_d7d7d7" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:background="@drawable/circle_colorprimal_12px"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/string_commitupdate"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_14sp" />

</LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_gravity="center"/>
</FrameLayout>